# auth-fastapi

./: .gitignore  main.py  pyproject.toml  readme.md
app/: finance_class.py  login.py  register.py  user.py
app/utils/: database.py  jwt.py  models.py
